Fixed weird z-index issue

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -114,6 +114,7 @@ a, a:visited {
     height: 45vh;
     border: 4px solid black;
     right: 0vw;
+    z-index: -999;
 }
 
 .construction .imageFix {
@@ -128,6 +129,7 @@ a, a:visited {
     width: 100%;
     height: 100%;
     background: url("Images/PhotoCollage.png") center/cover no-repeat;
+    z-index: -999;
 }
 
 .overlay {
@@ -144,6 +146,7 @@ a, a:visited {
     align-items: center;
     justify-content: center;
     background: rgba(255, 255, 255, 0.05);
+    z-index: -999;
 }
 
 .contact .overlay {
